data/derived/comb/progs/unify/prog2329.ml.out
Characters 0-1:
  1 @  [2];;
  ^
Error: This expression has type int but an expression was expected of type
         'a list
